--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am bran-new to learning code!</p>
-      <h1>I am from Birmingham, UK</h1>
-      <p>Details here...</p>
+      <h1>Where I'm From</h1>
+      <p>Birmingham, UK</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Learning new things</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Brummyland</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Challenging and exciting career</p>
     </section>
 
     <footer id="footer">
